# src/controller/v1/task/task.go
@@ -2,19 +2,26 @@ package task
 
 import (
 	"errors"
+	"math/rand"
 	"net/http"
 	"strings"
+	"time"
 
 	"github.com/Artexus/api-widyabhuvana/src/constant"
+	dbAnswer "github.com/Artexus/api-widyabhuvana/src/entity/v1/db/answer"
+	dbSubTask "github.com/Artexus/api-widyabhuvana/src/entity/v1/db/subtask"
 	dbUserActivity "github.com/Artexus/api-widyabhuvana/src/entity/v1/db/useractivity"
 	httpTask "github.com/Artexus/api-widyabhuvana/src/entity/v1/http/task"
+	"github.com/Artexus/api-widyabhuvana/src/repository/v1/answer"
 	"github.com/Artexus/api-widyabhuvana/src/repository/v1/category"
 	"github.com/Artexus/api-widyabhuvana/src/repository/v1/subcategory"
+	"github.com/Artexus/api-widyabhuvana/src/repository/v1/subtask"
 
 	"github.com/Artexus/api-widyabhuvana/src/repository/v1/task"
 	"github.com/Artexus/api-widyabhuvana/src/repository/v1/user"
 	"github.com/Artexus/api-widyabhuvana/src/repository/v1/useractivity"
 	"github.com/Artexus/api-widyabhuvana/src/util/aes"
+	"github.com/Artexus/api-widyabhuvana/src/util/array"
 	"github.com/Artexus/api-widyabhuvana/src/util/jwt"
 	"github.com/Artexus/api-widyabhuvana/src/util/rest"
 	"github.com/gin-gonic/gin"
@@ -24,15 +31,19 @@ import (
 type Controller struct {
 	repo         *task.Repository
 	user         *user.Repository
+	answer       *answer.Repository
+	subtask      *subtask.Repository
 	useractivity *useractivity.Repository
 	category     *category.Repository
 	subcategory  *subcategory.Repository
 }
 
-func NewController(repo *task.Repository, user *user.Repository, useractivity *useractivity.Repository, category *category.Repository, subcategory *subcategory.Repository) *Controller {
+func NewController(repo *task.Repository, user *user.Repository, answer *answer.Repository, subtask *subtask.Repository, useractivity *useractivity.Repository, category *category.Repository, subcategory *subcategory.Repository) *Controller {
 	return &Controller{
 		repo:         repo,
+		answer:       answer,
 		user:         user,
+		subtask:      subtask,
 		useractivity: useractivity,
 		category:     category,
 		subcategory:  subcategory,
@@ -40,7 +51,7 @@ func NewController(repo *task.Repository, user *user.Repository, useractivity *u
 }
 
 // Get godoc
-// @Tags User
+// @Tags Task
 // @Summary Get Tasks
 // @Description Get tasks
 // @Param id query string true "ID"
@@ -77,16 +88,44 @@ func (ctrl Controller) Get(ctx *gin.Context) {
 
 	resp := httpTask.GetResponse{}
 	copier.Copy(&resp, task)
-	if task.Type == constant.MultipleChoice {
-		p := task.Payload()
+
+	p := task.Payload()
+	if task.Type == constant.MultipleChoice || task.Type == constant.Essay {
 		copier.Copy(&resp.QnAs, p)
+	} else if task.Type == constant.Matching {
+		answer := []string{}
+		questions := []string{}
+		for _, t := range p {
+			questions = append(questions, t.Question)
+			answer = append(answer, t.Answer)
+		}
+
+		for i := 0; i < 10; i++ {
+			rnd := rand.New(rand.NewSource(time.Now().Unix()))
+
+			x := rnd.Intn(len(answer))
+			y := rnd.Intn(len(answer))
+
+			answer[x], answer[y] = answer[y], answer[x]
+		}
+
+		resp.Matches = httpTask.Matches{
+			Questions: questions,
+			Choices:   answer,
+		}
+
+	} else if task.Type == constant.Detective {
+		resp.Detective.SubTasks = aes.EncryptIDs(task.SubTasks)
+	} else if task.Type == constant.Level {
+		p := task.LevelPayload()
+		copier.Copy(&resp.Levels, p)
 	}
 
 	rest.ResponseData(ctx, http.StatusOK, resp)
 }
 
 // Submit godoc
-// @Tags User
+// @Tags Task
 // @Summary Submit Tasks
 // @Description Submit tasks
 // @Description Please send the answer accordingly
@@ -121,6 +160,24 @@ func (ctrl Controller) Submit(ctx *gin.Context) {
 		constant.Error.Println("task: get ", err)
 		rest.ResponseOutput(ctx, http.StatusInternalServerError, nil)
 		return
+	}
+
+	lp := task.LevelPayload()
+	if task.Type == constant.Detective {
+		req.SubTaskID, err = aes.DecryptID(req.EncSubTaskID)
+		if err != nil {
+			rest.ResponseOutput(ctx, http.StatusBadRequest, map[string]string{
+				"sub_task_id": constant.ErrInvalid.Error(),
+			})
+			return
+		}
+	} else if task.Type == constant.Level {
+		if len(lp.Level1.QnA)+len(lp.Level2.QnA) != len(req.Answer) {
+			rest.ResponseOutput(ctx, http.StatusBadRequest, map[string]string{
+				"answer": constant.ErrInvalid.Error(),
+			})
+			return
+		}
 	}
 
 	docID, userActivity, err := ctrl.useractivity.Get(ctx, req.UserID, task.CategoryID)
@@ -172,8 +229,9 @@ func (ctrl Controller) Submit(ctx *gin.Context) {
 		}
 	}
 
+	var resp *httpTask.SubmitResponse
 	minPoint := 0
-	if task.Type == constant.MultipleChoice {
+	if task.Type == constant.MultipleChoice || task.Type == constant.Matching {
 		if len(req.Answer) != len(task.QnAs) {
 			rest.ResponseOutput(ctx, http.StatusBadRequest, map[string]string{
 				"answers": constant.ErrInvalid.Error(),
@@ -183,10 +241,89 @@ func (ctrl Controller) Submit(ctx *gin.Context) {
 
 		payloads := task.Payload()
 		for i, payload := range payloads {
-			if !strings.EqualFold(req.Answer[i], payload.Answer) {
+			if !strings.EqualFold(req.Answer[i][0], payload.Answer) {
 				minPoint += (task.Point / len(payloads))
 			}
 		}
+	} else if task.Type == constant.Essay {
+		if len(req.Answer) <= 0 {
+			rest.ResponseOutput(ctx, http.StatusBadRequest, map[string]string{
+				"answers": constant.ErrInvalid.Error(),
+			})
+			return
+		}
+
+		id, err := ctrl.answer.Create(ctx, dbAnswer.Answer{
+			TaskID: task.ID,
+			UserID: req.UserID,
+			Answer: req.Answer[0][0],
+		})
+		if err != nil {
+			constant.Error.Println("answer: create ", err)
+			rest.ResponseOutput(ctx, http.StatusInternalServerError, nil)
+			return
+		}
+
+		resp = &httpTask.SubmitResponse{
+			EncID: aes.EncryptID(id),
+		}
+	} else if task.Type == constant.Detective {
+		var subTask dbSubTask.SubTask
+		subTask, err = ctrl.subtask.Get(ctx, req.SubTaskID)
+		if err != nil {
+			constant.Error.Println("subtask: get ", err)
+			rest.ResponseOutput(ctx, http.StatusInternalServerError, nil)
+			return
+		}
+
+		counter := 0
+		qnas := subTask.Payload()
+		for _, qna := range qnas {
+			isFound := false
+			for _, answer := range qna.Answer {
+				if array.In(qna.Answer, answer) {
+					isFound = true
+				}
+			}
+
+			if !isFound {
+				counter++
+			}
+		}
+
+		minPoint = task.Point/len(qnas) - counter
+	} else if task.Type == constant.Level {
+		counter := 0
+		lp := task.LevelPayload()
+		for i, lv := range lp.Level1.QnA {
+			isFound := false
+			for _, answer := range req.Answer[i] {
+				if array.In(lv.Answer, answer) {
+					isFound = true
+				}
+			}
+
+			if !isFound {
+				counter++
+			}
+		}
+
+		minPoint += lp.Level1.Total/len(lp.Level1.QnA) - counter
+
+		for i, lv := range lp.Level2.QnA {
+			isFound := false
+			for _, answer := range req.Answer[i+len(lp.Level1.QnA)-1] {
+				if array.In(lv.Answer, answer) {
+					isFound = true
+				}
+			}
+
+			if !isFound {
+				counter++
+			}
+		}
+
+		minPoint += lp.Level2.Total/len(lp.Level2.QnA) - counter
 	}
 
 	totalPoint := task.Point - minPoint
@@ -197,12 +334,12 @@ func (ctrl Controller) Submit(ctx *gin.Context) {
 		return
 	}
 
-	// record user activities
 	userActivity = dbUserActivity.UserActivity{
 		UserID:            req.UserID,
 		CategoryID:        task.CategoryID,
 		LastSubCategoryID: task.SubCategoryID,
 		LastTaskID:        task.ID,
+		SubCategoryPoint:  userActivity.SubCategoryPoint + totalPoint,
 		Status:            dbUserActivity.NotYet,
 	}
 
@@ -235,6 +372,16 @@ func (ctrl Controller) Submit(ctx *gin.Context) {
 	userActivity.RemainingTask = len(subCategory.Tasks) - j
 	if userActivity.RemainingSubCategory == 0 && userActivity.RemainingTask == 0 {
 		userActivity.Status = dbUserActivity.Completed
+	} else if userActivity.RemainingTask == 0 {
+		resp.SubCategoryPoint, userActivity.SubCategoryPoint = userActivity.SubCategoryPoint, 0
+		user, err := ctrl.user.Get(ctx, req.UserID)
+		if err != nil {
+			constant.Error.Println("user: get ", err)
+			rest.ResponseOutput(ctx, http.StatusInternalServerError, nil)
+			return
+		}
+
+		resp.TotalPoint = user.TotalPoint
 	}
 
 	err = ctrl.useractivity.Set(ctx, userActivity, docID)
@@ -244,5 +391,5 @@ func (ctrl Controller) Submit(ctx *gin.Context) {
 		return
 	}
 
-	rest.ResponseData(ctx, http.StatusOK, nil)
+	rest.ResponseData(ctx, http.StatusOK, resp)
 }
